<resources>
    <string name="app_name">TestApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="add_device">Add Device</string>
    <string name="cancel_add_device">Cancel</string>
    <string name="add_new_device">Fill in the information below to add new device</string>
    <string name="delete_device">Delete Device</string>
    <string name="back_to_menu">Go Back</string>
    <string name="placeholder">placeholder</string>
    <string name="no_text">Device #1</string>

    <string name="no_devices_connected">No devices are currently connected</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user_name">User Name</string>
    <string name="device_id">Device ID</string>
</resources>