<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".OneDeviceFragment">


    <ImageView
        android:id="@+id/severity_icon2"
        android:layout_width="113dp"
        android:layout_height="113dp"
        android:elevation="8dp"
        android:src="@drawable/ic_healthy_severity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/device_button2"
        app:layout_constraintStart_toStartOf="@+id/device_button2"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/healthy_icon_color" />

    <TextView
        android:id="@+id/deviceid_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:text="@string/placeholder"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/username_text2"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="@+id/username_text2"
        app:layout_constraintTop_toBottomOf="@+id/severity_icon2"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/severity_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:text="@string/placeholder"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/username_text2"
        app:layout_constraintStart_toStartOf="@+id/username_text2"
        app:layout_constraintTop_toBottomOf="@+id/username_text2"
        app:layout_constraintVertical_bias="0.009" />

    <Button
        android:id="@+id/device_button2"
        android:layout_width="186dp"
        android:layout_height="220dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/no_text"
        android:textColor="@color/button_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495"
        app:strokeColor="@color/purple_500" />

    <TextView
        android:id="@+id/username_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:text="@string/placeholder"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toTopOf="@+id/severity_icon2"
        app:layout_constraintEnd_toEndOf="@+id/severity_icon2"
        app:layout_constraintStart_toStartOf="@+id/severity_icon2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />

    <Button
        android:id="@+id/delete_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_color"
        android:text="@string/delete_device"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898" />

    <Button
        android:id="@+id/add_device_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_color"
        android:text="@string/add_device"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <ImageView
        android:id="@+id/severity_icon1"
        android:layout_width="113dp"
        android:layout_height="113dp"
        android:elevation="8dp"
        android:src="@drawable/ic_healthy_severity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/device_button1"
        app:layout_constraintStart_toStartOf="@+id/device_button1"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/healthy_icon_color" />

    <Button
        android:id="@+id/device_button1"
        android:layout_width="186dp"
        android:layout_height="220dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/no_text"
        android:textColor="@color/button_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:strokeColor="@color/purple_500" />

    <TextView
        android:id="@+id/username_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autoText="false"
        android:elevation="8dp"
        android:text="@string/placeholder"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/severity_icon1"
        app:layout_constraintEnd_toEndOf="@+id/severity_icon1"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="@+id/severity_icon1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <TextView
        android:id="@+id/severity_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:text="@string/placeholder"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/username_text1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username_text1"
        app:layout_constraintTop_toBottomOf="@+id/username_text1"
        app:layout_constraintVertical_bias="0.009" />

    <TextView
        android:id="@+id/deviceid_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:elevation="8dp"
        android:text="@string/placeholder"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="@+id/device_button1"
        app:layout_constraintEnd_toEndOf="@+id/username_text1"
        app:layout_constraintStart_toStartOf="@+id/username_text1"
        app:layout_constraintTop_toBottomOf="@+id/severity_icon1"
        app:layout_constraintVertical_bias="0.956" />

</androidx.constraintlayout.widget.ConstraintLayout>