<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OneDeviceFragment">

    <LinearLayout
        android:id="@+id/llOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/space"
        android:layout_weight="0.4"
        android:orientation="vertical">

        <Button
            android:id="@+id/add_device_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/button_color"
            android:text="@string/add_device"
            android:textColor="@color/text_color" />
    </LinearLayout>

   <!-- button 2 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_two"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_weight="2"
        android:background="@color/space"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/severity_icon_two"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:elevation="8dp"
            android:src="@drawable/ic_healthy_severity"
            app:layout_constraintBottom_toTopOf="@+id/deviceid_text_two"
            app:layout_constraintEnd_toEndOf="@+id/device_button_two"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/device_button_two"
            app:layout_constraintTop_toBottomOf="@+id/username_text_two"
            app:layout_constraintVertical_bias="0.0"
            app:tint="@color/healthy_icon_color" />

        <Button
            android:id="@+id/device_button_two"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:backgroundTint="@color/button_color"
            android:text="@string/no_text"
            android:textColor="@color/button_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.295"
            app:strokeColor="@color/purple_500" />

        <TextView
            android:id="@+id/username_text_two"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/device_button_two"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/device_button_two"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.223" />

        <TextView
            android:id="@+id/deviceid_text_two"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/device_button_two"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/device_button_two"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.734" />

        <!-- button 1 -->

        <TextView
            android:id="@+id/severity_text_two"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toTopOf="@+id/deviceid_text_two"
            app:layout_constraintEnd_toEndOf="@+id/device_button_two"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/device_button_two"
            app:layout_constraintTop_toBottomOf="@+id/username_text_two"
            app:layout_constraintVertical_bias="0.011" />

        <Button
            android:id="@+id/device_button_one"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/button_color"
            android:text="@string/no_text"
            android:textColor="@color/button_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/purple_500" />

        <ImageView
            android:id="@+id/severity_icon"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginBottom="8dp"
            android:elevation="8dp"
            android:src="@drawable/ic_healthy_severity"
            app:layout_constraintBottom_toBottomOf="@+id/device_button_one"
            app:layout_constraintEnd_toEndOf="@+id/device_button_one"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/device_button_one"
            app:tint="@color/healthy_icon_color" />

        <TextView
            android:id="@+id/username_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:elevation="8dp"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/severity_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="57dp"
            android:elevation="8dp"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/deviceid_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="44dp"
            android:elevation="8dp"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llTwo"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_weight="2"
        android:background="@color/space"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="266dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/llThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llFive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">
        <Button
            android:id="@+id/delete_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:text="@string/delete_device"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

</LinearLayout>